--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -1,31 +1,31 @@
-#01-test-base.yml
 name: Run Unit Tests and Merge to Dev
 
 on:
   push:
     branches: 
       - feature/**
-
-jobs:
   # ───────────────────────────────────────────────────────────
   # Job 1: Llamar al workflow reusable de tests
-  # ✅ SOLO CAMBIAR ESTAS VARIABLES
   # ───────────────────────────────────────────────────────────
+jobs:
   test:
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/test.yml@main
     with:
       external_repo: dariasmoises979-blip/app
       external_repo_ref: main
       external_repo_path: ./app-repo
-      projectBaseDir: "."  # ✅ CAMBIO 1: Era "./pipeline-build", ahora es "."
+      projectBaseDir: "./pipeline-build"  # ✅ Nuevo
       sonar_args: >
         -Dsonar.organization=dariasmoises979-blip
-        -Dsonar.projectKey=dariasmoises979-blip_pipeline-build
-        -Dsonar.projectName=pipeline-build
-        -Dsonar.sources=.github/workflows
-        -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/app-repo/**
+        -Dsonar.projectKey=dariasmoises979-blip_app
+        -Dsonar.projectName=app
+        -Dsonar.python.version=3.10
+        -Dsonar.sources=system_info_app
+        -Dsonar.tests=system_info_app/test
+        -Dsonar.test.inclusions=**/test/**,**/tests/**
+        -Dsonar.coverage.exclusions=**/test/**,**/tests/**
     secrets:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_PIPELINE }}  # ✅ CAMBIO 2: Asegurar que sea SONAR_TOKEN_PIPELINE
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH_TOKEN2 }}
 
   # ───────────────────────────────────────────────────────────
@@ -48,6 +48,7 @@ jobs:
       - name: 🧮 Escanear consultas SQL en el proyecto
         run: |
           echo "🔍 Buscando consultas SQL en el código..."
+          # Ejemplo de comando realista (simulado)
           grep -R "SELECT" . || echo "No se encontraron consultas SQL directas."
           echo "✅ Escaneo de queries completado."
 
@@ -74,53 +75,59 @@ jobs:
   # ───────────────────────────────────────────────────────────
   merge-to-dev:
     name: Merge to Dev
-    needs: test
+    needs: test  # ⚙️ Solo se ejecuta si los tests pasan
+    # ✅ Validación adicional: solo si es una rama feature
     if: startsWith(github.ref_name, 'feature/') && success()
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/auto-merge.yml@main
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/auto-merge.yml@main   # 📂 Ruta al workflow reusable
     with:
-      source_branch: ${{ github.ref_name }}
-      target_branch: 'dev'
-      use_fast_forward: false
+      source_branch: ${{ github.ref_name }}   # La rama feature actual
+      target_branch: 'dev'                     # Fusionar hacia dev
+      use_fast_forward: false                  # Crear commit de merge explícito
       merge_message: '🔀 Auto-merge from ${{ github.ref_name }} after successful tests'
+
 
   # ───────────────────────────────────────────────────────────
   # Job 3: Crear PR de dev a qa
   # ───────────────────────────────────────────────────────────
   create-pr-to-integration:
     name: Create PR to Integration
-    needs: merge-to-dev
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/pull-request.yml@main
+    needs: merge-to-dev  # ⚙️ Solo se ejecuta si los tests pasan
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/pull-request.yml@main  # 📂 Ruta al workflow reusable
     with:
-      source_branch: 'dev'
-      target_branch: 'qa'
+      source_branch: 'dev'                    # Desde dev
+      target_branch: 'qa'                     # Hacia qa
       pr_title: '🚀 Deploy DEV to QA'
       environment: 'qa'
       labels: 'automated,deployment,qa,dev'
+
 
   # ───────────────────────────────────────────────────────────
   # Job 4: Build Docker Image
   # ───────────────────────────────────────────────────────────
   build-image:
     name: Build Docker Image
-    needs: create-pr-to-integration
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image.yml@main
+    needs: create-pr-to-integration  # ⚙️ Solo se ejecuta si los tests pasan
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image.yml@main  # 📂 Ruta al workflow reusable
     with:
       docker_image: mi-aplicacion
       dockerhub_username: dariasmoises979
       environment: qa
       
+      # Configuración del repo externo
       external_repo: dariasmoises979-blip/app
       external_repo_ref: main
       external_repo_path: ./app-repo
       
+      # Rutas del build
       dockerfile_path: ./app-repo/local/Dockerfile
-      build_context: ./app-repo
+      build_context: ./app-repo                    # ✅ Sin barra final (correcto)
       
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH_TOKEN2}}
 
-  # ───────────────────────────────────────────────────────────
+ #############################################################################
+ # ───────────────────────────────────────────────────────────
   # Job 5: Mensaje de confirmación
   # ───────────────────────────────────────────────────────────
   say-hello:
@@ -130,4 +137,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Mensaje final
-        run: echo "✅ Se demuestra que se puede modificar el workflow por proyecto sin afectar a otros proyectos."
+        run: echo "✅ Se demuestra que se puede modificar el workflow por proyecto sin afectar a otros proyectos."     
