--- a/.github/workflows/04-base_deployment_main.yml
+++ b/.github/workflows/04-base_deployment_main.yml
@@ -7,14 +7,9 @@
 name: Deploy to Kubernetes
 
 on:
-  # Solo se ejecuta cuando hay PR de integration a main
-  pull_request:
+  push:
     branches:
       - main
-    types:
-      - opened
-      - synchronize
-      - reopened
 
 permissions:
   actions: read
