--- a/.github/workflows/04-base_deployment_main.yml
+++ b/.github/workflows/04-base_deployment_main.yml
@@ -54,7 +54,7 @@ jobs:
     name: 📥 Get Image Info
     needs: check-source
     runs-on: ubuntu-latest
-    if: needs.check-source.outputs.should_deploy == 'true'
+    #if: needs.check-source.outputs.should_deploy == 'true'
     
     outputs:
       image_name: ${{ steps.load_info.outputs.image_name }}
@@ -192,7 +192,7 @@ jobs:
       - deploy-staging
       - deploy-pro
     runs-on: ubuntu-latest
-    if: always() && needs.check-source.outputs.should_deploy == 'true'
+    #if: always() && needs.check-source.outputs.should_deploy == 'true'
     
     steps:
       - name: 📊 Generate deployment summary
