--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -107,10 +107,14 @@ jobs:
   build-image:
     name: Build Docker Image
     needs: create-pr-to-integration  # ⚙️ Solo se ejecuta si los tests pasan
-    uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image.yml@main  # 📂 Ruta al workflow reusable
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image-gcp.yml@main  # 📂 Ruta al workflow reusable
     with:
-      docker_image: mi-aplicacion
-      dockerhub_username: dariasmoises979
+      #docker_image: mi-aplicacion
+      #dockerhub_username: dariasmoises979
+      gcp_project_id: GCP_SA_KEY 
+      gcp_region: us-central1
+      artifact_registry: artifact_dariasmoises979
+     
       environment: qa
       
       # Configuración del repo externo
