--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -129,6 +129,7 @@ jobs:
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH_TOKEN2}}
+      GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
 
  #############################################################################
  # ───────────────────────────────────────────────────────────
