--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -109,7 +109,7 @@ jobs:
     needs: create-pr-to-integration  # ⚙️ Solo se ejecuta si los tests pasan
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image-gcp.yml@main  # 📂 Ruta al workflow reusable
     with:
-      #docker_image: mi-aplicacion
+      docker_image: mi-aplicacion
       #dockerhub_username: dariasmoises979
       gcp_project_id: GCP_SA_KEY 
       gcp_region: us-central1
