--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -113,7 +113,7 @@ jobs:
       #dockerhub_username: dariasmoises979
       gcp_project_id: elite-ceremony-476307-s9 
       gcp_region: us-central1
-      artifact_registry: artifact_dariasmoises979
+      artifact_registry: dariasmoises979
      
       environment: qa
       
